<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_drawer_button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageButton
        android:id="@+id/btn_share_email"
        android:layout_width="@dimen/btn_floating_action_dimen"
        android:layout_height="@dimen/btn_floating_action_dimen"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/ic_btn_share_email"
        android:contentDescription="@string/btn_view_thumbnails"/>

    <ImageButton
        android:id="@+id/btn_share_twitter"
        android:layout_width="@dimen/btn_floating_action_dimen"
        android:layout_height="@dimen/btn_floating_action_dimen"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/ic_btn_share_twitter"
        android:contentDescription="@string/btn_view_location"/>

    <ImageButton
        android:id="@+id/btn_share_fb"
        android:layout_width="@dimen/btn_floating_action_dimen"
        android:layout_height="@dimen/btn_floating_action_dimen"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/ic_btn_share_fb"
        android:contentDescription="@string/btn_view_list"/>

    <ImageButton
        android:id="@+id/btn_show_options"
        android:layout_width="@dimen/btn_floating_action_dimen"
        android:layout_height="@dimen/btn_floating_action_dimen"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/ic_btn_share"
        android:contentDescription="@string/btn_show_options"/>

    <ImageView
        android:id="@+id/img_android"
        android:layout_width="@dimen/img_icon_dimen"
        android:layout_height="@dimen/img_icon_dimen"
        android:layout_centerInParent="true"
        android:contentDescription="@string/img_android"
        android:src="@mipmap/ic_launcher"
        android:visibility="invisible"/>

</RelativeLayout>